// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fab button with ref 1`] = `
<DocumentFragment>
  <button
    class="MuiButtonBase-root MuiFab-root MuiFab-circular MuiFab-sizeLarge css-a8igs1-MuiButtonBase-root-MuiFab-root"
    tabindex="0"
    type="button"
  >
    text
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</DocumentFragment>
`;

exports[`fab lbutton with to 1`] = `
<DocumentFragment>
  <a
    class="MuiButtonBase-root MuiFab-root MuiFab-circular MuiFab-sizeLarge css-a8igs1-MuiButtonBase-root-MuiFab-root"
    href="/page2"
    tabindex="0"
  >
    text
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </a>
</DocumentFragment>
`;

exports[`fab should be rendered correctly 1`] = `
<DocumentFragment>
  <button
    class="MuiButtonBase-root MuiFab-root MuiFab-circular MuiFab-sizeLarge css-a8igs1-MuiButtonBase-root-MuiFab-root"
    tabindex="0"
    type="button"
  >
    text
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</DocumentFragment>
`;
